--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insurance</title>
     <link rel="stylesheet" href="index.css">
-    <script src="https://kit.fontawesome.com/7af49314fb.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="Assets/fontawesome-free-5.15.4-web/css/all.css">
 </head>
 <body>
     <section class="main">
@@ -53,6 +53,23 @@
                 <h2>100% Satisfaction</h2>
                 <p>the quick fox jumps over the lazy dog</p>
             </div>
+        </div>
+    </section>
+    <section class="section2">
+        <div class="mind">
+            <i class="fas fa-book"></i>
+            <h2>Peace of Mind</h2>
+            <p>So it really behaves like neither, <br>Now we have given up.</p>
+        </div>
+        <div class="life">
+            <i class="far fa-bookmark"></i>
+            <h2>Set for Life</h2>
+            <p>They were used to create the <br>machines that launched</p>
+        </div>
+        <div class="satisfaction">
+            <i class="fas fa-user-friends"></i>
+            <h2>100% Satisfaction</h2>
+            <p>So it really behaves like neither, <br>Now we have given up.</p>
         </div>
     </section>
 </body>
