Added section 3 with images and text

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             </div>
         </div>
     </section>
+
     <section class="section2">
         <div class="mind">
             <i class="fas fa-book"></i>
@@ -70,6 +71,48 @@
             <i class="fas fa-user-friends"></i>
             <h2>100% Satisfaction</h2>
             <p>So it really behaves like neither, <br>Now we have given up.</p>
+        </div>
+    </section>
+
+    <section class="section3">
+        <div class="section3-head">
+            <h2>Industry</h2>
+            <p>Problems trying to resolve the conflict between <br>the two major realms of Classical physics: Newtonian mechanics. </p>
+        </div>
+        <div class="section3-content">
+            <div class="user1">
+                <img src="Assets/user.1.png" alt="user1" class="user-img">
+                <p>Slate helps you see how <br>many more days you need <br>to work to reach your financial <br>goal for the month and year.</p>
+                <P class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </P>
+            </div>
+            <div class="user2">
+                <img src="Assets/user.2.png" alt="user2" class="user-img">
+                <p>Slate helps you see how <br>many more days you need <br>to work to reach your financial <br>goal for the month and year.</p>
+                <P class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </P>
+            </div>
+            <div class="user3">
+                <img src="Assets/user.3.png" alt="user3" class="user-img">
+                <p>Slate helps you see how <br>many more days you need <br>to work to reach your financial <br>goal for the month and year.</p>
+                <P class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </P>
+            </div>
         </div>
     </section>
 </body>
