Added Newsletter subscribe section

--- a/index.html
+++ b/index.html
@@ -115,5 +115,24 @@
             </div>
         </div>
     </section>
+
+    <section class="section4">
+        <div class="sponsors">
+            <div class="vectors">
+                <img src="Assets/Vector.png" alt="Vector">
+                <img src="Assets/Vector-1.png" alt="Vector-1" class="vector-img">
+                <img src="Assets/Vector-2.png" alt="Vector-2" class="vector-img">
+                <img src="Assets/Vector-3.png" alt="Vector-3" class="vector-img">
+                <img src="Assets/Vector-4.png" alt="Vector-4" class="vector-img">
+                <img src="Assets/Vector-5.png" alt="Vector-5" class="vector-img">
+            </div>
+        </div>
+        <div class="subscribe">
+            <p>Subscribe for latest <br>Newsletter</p>
+            <div>
+                <p class="input"><input type="text" placeholder="Your Email" class="email-input"> <button class="subscribe-btn">Subscribe</button> </input></p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
