Added section 5 for pricing and its features

--- a/index.html
+++ b/index.html
@@ -134,5 +134,53 @@
             </div>
         </div>
     </section>
+
+    <section class="section5">
+        <div class="section5-head">
+            <h2>Pricing</h2>
+            <p>Problems trying to resolve the conflict between <br>the two major realms of Classical physics: Newtonian mechanics</p>
+        </div>
+        <div class="section5-content">
+            <div class="pricing free">
+                <h2>FREE</h2>
+                <h3>Organize across all <br>apps by hand</h3>
+                <p class="price"><strong class="bigtext">0 <sup><sup>$</sup></sup></strong> Per month</p>
+                <ul class="features">
+                    <li><i class="fas fa-check-circle"></i> Unlimited Product Updates</li>
+                    <li><i class="fas fa-check-circle"></i> Unlimited Product Updates</li>
+                    <li><i class="fas fa-check-circle"></i> Unlimited Product Updates</li>
+                    <li><i class="fas fa-check-circle unchecked"></i> 1GB Cloud storage</li>
+                    <li><i class="fas fa-check-circle unchecked"></i> Email and community support</li>
+                </ul>
+                <a href="#" class="try">Try for free</a>
+            </div>
+            <div class="pricing standard">
+                <h2>STANDARD</h2>
+                <h3>Organize across all <br>apps by hand</h3>
+                <p class="price"><strong class="bigtext">9.99 <sup><sup>$</sup></sup></strong> Per month</p>
+                <ul class="features">
+                    <li><i class="fas fa-check-circle"></i> Unlimited Product Updates</li>
+                    <li><i class="fas fa-check-circle"></i> Unlimited Product Updates</li>
+                    <li><i class="fas fa-check-circle"></i> Unlimited Product Updates</li>
+                    <li><i class="fas fa-check-circle unchecked"></i> 1GB Cloud storage</li>
+                    <li><i class="fas fa-check-circle unchecked"></i> Email and community support</li>
+                </ul>
+                <a href="#" class="try">Try for free</a>
+            </div>
+            <div class="pricing premium">
+                <h2>PREMIUM</h2>
+                <h3>Organize across all <br>apps by hand</h3>
+                <p class="price"><strong class="bigtext">19.99 <sup><sup>$</sup></sup></strong> Per month</p>
+                <ul class="features">
+                    <li><i class="fas fa-check-circle"></i> Unlimited Product Updates</li>
+                    <li><i class="fas fa-check-circle"></i> Unlimited Product Updates</li>
+                    <li><i class="fas fa-check-circle"></i> Unlimited Product Updates</li>
+                    <li><i class="fas fa-check-circle unchecked"></i> 1GB Cloud storage</li>
+                    <li><i class="fas fa-check-circle unchecked"></i> Email and community support</li>
+                </ul>
+                <a href="#" class="try">Try for free</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
