Added section 6 and 7 for appointment booking

--- a/index.html
+++ b/index.html
@@ -182,5 +182,55 @@
             </div>
         </div>
     </section>
+
+    <section class="section6">
+        <div class="branches">
+            <div class="branches-txt">
+                <h2>We Have Branches All <br>Over The World</h2>
+                <p>The gradual accumulation of information about atomic and <br>small scale behavior during the first quarter of the 20th <br>century, which gave some indications of how small things <br>do behave, produced an increasing confusion which was <br>Heisenberg and Born</p>
+            </div>
+            <div class="branches-img">
+                <img src="Assets/pngwing 1.png" alt="pngwing" class="pngwing">
+            </div>
+        </div>
+    </section>
+    
+    <section class="section7">
+        <div class="contact">
+            <img src="/Assets/contact-cover.2.png" alt="contact-cover" class="contact-cover">
+            <form action="." method="post" class="contact-form">
+                <h2>Book Appointment</h2>
+                <label for="name">Name*</label><br>
+                <input type="text" id="name" placeholder="Full Name *">
+                <br>
+                <label for="email">Email Address*</label><br>
+                <input type="email" id="email" placeholder="example@gmail.com">
+                <br>
+                <label for="dept">Department*</label><br>
+                <select name="Department" id="dept">
+                    <option value="0">--Please select--</option>
+                    <option value="dept1">Banking</option>
+                    <option value="dept2">Insurance</option>
+                    <option value="dept3">Savings</option>
+                </select>
+                <br>
+                <label for="time">Time*</label><br>
+                <select name="Time" id="time">
+                    <option value="4">4:00 Available</option>
+                    <option value="5">5:00 Available</option>
+                    <option value="6">6:00 Available</option>
+                    <option value="7">7:00 Available</option>
+                </select>
+                <br>
+                <button type="button">Book Appointment</button>
+            </form>
+        </div>
+
+        
+    </section>
+
+    <section class="section8">
+
+    </section>
 </body>
 </html>
