Added links and footer sections

--- a/index.html
+++ b/index.html
@@ -226,11 +226,73 @@
             </form>
         </div>
 
-        
+        <div class="consult">
+            <div>
+                <h2>Consulting Agency For Your Business</h2>
+                <p>the quick fox jumps over the lazy dog</p>
+            </div>
+            <div>
+                <a href="#" class="contact-us">Contact Us</a>
+            </div>
+        </div>
     </section>
 
     <section class="section8">
-
+        <div class="links">
+            <ul>
+                <li><h3>Company Info</h3></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Career</a></li>
+                <li><a href="#">We are hiring</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </div>
+        <div class="links">
+            <ul>
+                <li><h3>Legal</h3></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Career</a></li>
+                <li><a href="#">We are hiring</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </div>
+        <div class="links">
+            <ul>
+                <li><h3>Features</h3></li>
+                <li><a href="#">Business Marketing</a></li>
+                <li><a href="#">User Analytic</a></li>
+                <li><a href="#">Live Chat</a></li>
+                <li><a href="#">Unlimited support</a></li>
+            </ul>
+        </div>
+        <div class="links">
+            <ul>
+                <li><h3>Resources</h3></li>
+                <li><a href="#">IOS & Android</a></li>
+                <li><a href="#">Watch a Demo</a></li>
+                <li><a href="#">Customers</a></li>
+                <li><a href="#">API</a></li>
+            </ul>
+        </div>
+        <div class="links">
+            <ul>
+                <li><h3>Get In Touch</h3></li>
+                <li><a href="#"><i class="fas fa-phone-alt"></i> (480) 555-0103</a></li>
+                <li><a href="#"><i class="fas fa-map-marker-alt"></i> 4517 Washington Ave.</a></li>
+                <li><a href="#"><i class="far fa-envelope"></i> debra.holt@example.com</a></li>
+            </ul>
+        </div>
     </section>
+
+    <footer>
+        <div>
+            <p>Made With Love By SamIan All Rights Reserved</p>
+        </div>
+        <div class="social-icons">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
