--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             <a href="#" class="logo">
                 BrandName
             </a>
+            <!--Menu-btn-->
+            <input type="checkbox" class="menu-btn" id="menu-btn">
+            <label for="menu-btn" class="menu-icon">
+                <span class="nav-icon"></span>
+            </label>
             <!--Menu-->
             <ul class="menu">
                 <li><a href="#">Home</a></li>
@@ -22,7 +27,7 @@
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-            <ul>
+            <ul class="menu menu2">
                 <li><a href="#" class="login">Login</a></li>
                 <li><a href="#" class="member">Become a Member&nbsp;<span class="fas fa-arrow-right"></span> </a></li>
             </ul>
