It will fix flex direction for banners div

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <h2>Consulting Agency For Your Business</h2>
                 <p>the quick fox jumps over the lazy dog</p>
             </div>
-            <div>
+            <div class="contact2">
                 <a href="#" class="contact-us">Contact Us</a>
             </div>
         </div>
