It will change display for content to cover full screen width on very small screens

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     
     <section class="section7">
         <div class="contact">
-            <img src="/Assets/contact-cover.2.png" alt="contact-cover" class="contact-cover">
+            <img src="Assets/contact-cover.2.png" alt="contact-cover" class="contact-cover">
             <form action="." method="post" class="contact-form">
                 <h2>Book Appointment</h2>
                 <label for="name">Name*</label><br>
